# convert_degrees

./: .gitignore  Cargo.toml  README.md
src/: degree.rs  lib.rs  main.rs
