[package]
name = "convert_degrees"
version = "0.1.0"
edition = "2021"
description = "Converts degrees between Fahrenheit, Celsius, and Kelvin"
license = "MIT"
authors = ["Tijme"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "deg"
path = "src/main.rs"

[dependencies]
bpaf = { version = "0.7", features = ["derive", "bright-color"] }
